syntax = "proto3";

message AddInventoryRequest {
    string productId = 1;
    int32 stock = 2;
    string shopId = 3;
}

message AddInventoryResponse {
    bool success = 1;
}

message ReserveInventoryRequest{
    string productId = 1;
    int32 quantity = 2;
    string cartId = 3;
}

message ReserveInventoryResponse{
    int32 modifiedCount = 1;
}

service InventoryService {
    rpc AddInventoryItem (AddInventoryRequest) returns (AddInventoryResponse);
    rpc ReserveInventory (ReserveInventoryRequest) returns (ReserveInventoryResponse);
}